# organization_catalog_ddd

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.sh  pyproject.toml
.github/workflows/: deploy.yml
app/application/: init.py  mediator.py
app/application/commands/: activity.py  api_key.py  building.py  organization.py  user.py
app/application/common/: exceptions.py
app/application/exceptions/: activity.py  building.py  mediator.py  organization.py
app/application/queries/: activity.py  api_key.py  building.py  organization.py  user.py
app/domain/base/: entity.py
app/domain/organization/: entities.py  exceptions.py
app/domain/organization/interfaces/repositories/: __init__.py  activity.py  building.py  organization.py
app/domain/organization/services/: __init__.py  activity.py  building.py  organization.py
app/domain/organization/value_objects/: __init__.py  activity.py  activity_name.py  building.py  building_address.py  building_coordinates.py  organization.py  organization_name.py  organization_phone.py
app/domain/user/: entities.py  exceptions.py
app/domain/user/interfaces/repositories/: __init__.py  api_key.py  user.py
app/domain/user/services/: __init__.py  api_key.py  user.py
app/domain/user/value_objects/: __init__.py  user.py
app/infrastructure/database/: main.py  uow.py
app/infrastructure/database/converters/: __init__.py  activity.py  building.py  organization.py  user.py
app/infrastructure/database/gateways/: postgres.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 2025_11_16_0339-f65ef774f680_.py  2025_11_16_0401-f9ba2b13b2db_.py  2025_11_16_0417-05b05195247d_.py  4974a94bf6f4_.py  79b35f70df0d_.py  9f7fd525417c_.py  d58750be8a0c_.py  fb7754ae79bd_.py  fbaaca1b6699_.py  fix_activities_unique_index.py
app/infrastructure/database/models/: __init__.py  activity.py  base.py  building.py  organization.py  user.py
app/infrastructure/database/repositories/: __init__.py  activity.py  api_key.py  base.py  building.py  organization.py  user.py
app/infrastructure/database/repositories/dummy/: __init__.py  activity.py  api_key.py  building.py  organization.py  user.py
app/infrastructure/logging/: __init__.py  handler.py  logger.py
app/presentation/api/: __init__.py  auth.py  dependencies.py  exceptions.py  filters.py  main.py  schemas.py
app/presentation/api/middleware/: __init__.py  cors.py  logging.py
app/presentation/api/v1/: __init__.py
app/presentation/api/v1/activity/: handlers.py  schemas.py
app/presentation/api/v1/building/: handlers.py  schemas.py
app/presentation/api/v1/organization/: handlers.py  schemas.py
app/presentation/api/v1/user/: handlers.py  schemas.py
app/settings/: __init__.py  config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/commands/: test_activity.py  test_api_key.py  test_building.py  test_organization.py  test_user.py
app/tests/application/queries/: test_activity.py  test_api_key.py  test_building.py  test_organization.py  test_user.py
app/tests/domain/entities/: test_organization.py
app/tests/domain/value_objects/: test_organization.py
app/tests/presentation/api/: conftest.py  test_activities.py  test_buildings.py  test_organizations.py
docker_compose/: app.yaml  monitoring.yaml  storages.yaml
docker_compose/initdb/: 01-postgis.sql
monitoring/logstash/pipeline/: logstash.conf  logstash_new.conf
(+13 files in other folders)
