[project]
name = "organization-catalog-ddd"
version = "0.1.0"
description = ""
authors = [
    {name = "chapppington",email = "stas.mega.96@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
isort = "^7.0.0"
faker = "^37.12.0"
pytest-asyncio = "^1.2.0"

